# testing-process

./: .gitignore  Cargo.toml  README.md  metadata.json
pkg/: manifest.json
test/: tests.toml
test/testing-process-test/: Cargo.toml  metadata.json
test/testing-process-test/api/: testing-process-template-dot-os-v0.wit  testing-process-test-template-dot-os-v0.wit  testing-process.wit  types-testing-process-template-dot-os-v0.wit
test/testing-process-test/pkg/: manifest.json  testing-process-test.wasm
test/testing-process-test/testing-process-test/: Cargo.toml
test/testing-process-test/testing-process-test/src/: lib.rs  tester_lib.rs
testing-process/: Cargo.toml
testing-process/src/: lib.rs
