[dependencies]
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.36.0"
base64ct = "=1.6.0"

[dependencies.caller-utils]
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
branch = "develop"
git = "https://github.com/hyperware-ai/hyperprocess-macro"

[dependencies.hyperware_app_common]
branch = "develop"
git = "https://github.com/hyperware-ai/hyperprocess-macro"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "testing-process"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
